Support Java 8 launch scripts