@@ -10,6 +10,6 @@ if errorlevel 1 (
     exit /b 1
 )
 
-set "JAVA_FLAGS=--enable-native-access=ALL-UNNAMED -Dfile.encoding=UTF-8"
+set "JAVA_FLAGS=-Dfile.encoding=UTF-8"
 
 java %JAVA_FLAGS% -cp "out;lib/*" TinyCraft
